# Project-Evolution

./: .env.example  .gitignore  README.md  README_SETUP.md  docker-compose.yml  pyproject.toml  technical_report_CN.md
.github/: AGENT_GUIDE.md  copilot-instructions.md
.github/agents/: context_architect.agent.md  gem-planner.agent.md  (+6 more)
docs/: DATA_VIEWING_GUIDE.md  FINAL_SUMMARY.md  FIX_PLAN.md  FIX_VERIFICATION_REPORT.md  IMPROVEMENT_PLAN_20260312.md  INTELLIGENCE_ANALYSIS.md  PROACTIVE_PUSH_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SYSTEM_TEST_REPORT_20260312.md  TEST_REPORT_20260311.md  TOOL_CALL_IMPROVEMENT.md  TOOL_CALL_IMPROVEMENT_STATUS.md  VALIDATION_REPORT.md
evolution/: __init__.py
scripts/: crontab.txt  evening_report.py  health_check.sh  install_cron.sh  morning_briefing.py  setup.sh  show_logo.py  start_rsshub.sh  start_telegram_bot.sh  start_web_chat.sh  test_telegram_config.py  validate_credentials.py  weekly_report.py
tests/: auto_stress_test.py  conftest.py  stress_test_real.py  test_bridge.py  test_db_manager.py  test_db_tool.py  test_e2e_tool_calling.py  test_embedding_only.py  test_fixes.py  test_full_system.py  test_integration.py  test_intelligence_tool.py  test_live_integration.py  test_llm_tool_calling.py  test_mem0_patch.py  test_mem0_quick.py  test_mem0_simple.py  test_memory_tool.py  test_notification.py  test_notion_push.py  test_notion_schema.py  test_proactive_push.py  test_proactive_push_simple.py  test_real_functionality.py  test_reflection_tool.py  test_step_by_step.py  test_system_comprehensive.py  verify_reset.py
(+45 files in other folders)
